--- a/index.html
+++ b/index.html
@@ -409,20 +409,20 @@
   <meta name="description" content="SHE CARE by Sree Alagar Enterprises is Trichy's trusted source for custom-made uniforms and garments. We specialize in school uniforms, hospital wear, corporate clothing, and embroidery with on-time delivery across Tamil Nadu." />
   <meta name="keywords" content="SHE CARE, custom uniforms Trichy, garment manufacturer Tamil Nadu, embroidery services, school uniforms Trichy, hospital uniforms, corporate uniforms, tailoring Trichy, women garments, custom tailoring Trichy" />
   <meta name="author" content="Sree Alagar Enterprises" />
-  <link rel="canonical" href="https://www.shecaregarments.com/" />
+  <link rel="canonical" href="https://sreealagarenterprises.in/" />
 
   <!-- Open Graph Meta Tags for Facebook/LinkedIn -->
   <meta property="og:title" content="SHE CARE – Sree Alagar Enterprises | Custom Uniforms & Tailoring in Trichy" />
   <meta property="og:description" content="Leading garment manufacturer in Trichy delivering premium school uniforms, corporate wear, and embroidery services across Tamil Nadu." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://www.shecaregarments.com/" />
-  <meta property="og:image" content="https://www.shecaregarments.com/logo.jpg" />
+  <meta property="og:image" content="https://sreealagarenterprises.in/logo.jpg" />
 
   <!-- Twitter Card Meta Tags -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="SHE CARE – Sree Alagar Enterprises" />
   <meta name="twitter:description" content="Trusted uniform tailor in Trichy offering quality garments and embroidery. School, hospital, and business wear tailored to perfection." />
-  <meta name="twitter:image" content="https://www.shecaregarments.com/logo.jpg" />
+  <meta name="twitter:image" content="https://sreealagarenterprises.in/logo.jpg" />
 
   <!-- Structured Data for Google (Local Business) -->
   <script type="application/ld+json">
@@ -646,14 +646,14 @@
             <h3 class="font-bold">Corporate Uniforms</h3>
           </div>
         </div>
-        <div class="gallery-item" onclick="openLightbox('gallery2.jpg')">
-          <img src="gallery2.jpg" alt="Gallery Image 2" loading="lazy" />
+        <div class="gallery-item" onclick="openLightbox('gallery2..jpg')">
+          <img src="gallery2..jpg" alt="Gallery Image 2" loading="lazy" />
           <div class="gallery-overlay">
             <h3 class="font-bold">School Uniforms</h3>
           </div>
         </div>
-        <div class="gallery-item" onclick="openLightbox('gallery3.jpg')">
-          <img src="gallery3.jpg" alt="Gallery Image 3" loading="lazy" />
+        <div class="gallery-item" onclick="openLightbox('gallery3..jpg')">
+          <img src="gallery3..jpg" alt="Gallery Image 3" loading="lazy" />
           <div class="gallery-overlay">
             <h3 class="font-bold">Embroidery Work</h3>
           </div>
@@ -1320,8 +1320,8 @@
     // Gallery lightbox
     const galleryImages = [
       'gallery1.jpg',
-      'gallery2.jpg',
-      'gallery3.jpg',
+      'gallery2..jpg',
+      'gallery3..jpg',
       'gallery4.jpg',
       'gallery5.jpg',
       'gallery7.jpg'
