--- a/index.html
+++ b/index.html
@@ -659,37 +659,37 @@
 
       <div class="gallery-grid">
         <div class="gallery-item" onclick="openLightbox('https://via.placeholder.com/600x400')">
-          <img src="https://via.placeholder.com/600x400" alt="Gallery1.jpg" loading="lazy" />
+          <img src="Gallery1.jpg" alt="Gallery1.jpg" loading="lazy" />
           <div class="gallery-overlay">
             <h3 class="font-bold">Corporate Uniforms</h3>
           </div>
         </div>
         <div class="gallery-item" onclick="openLightbox('https://via.placeholder.com/600x400')">
-          <img src="https://via.placeholder.com/600x400" alt="Gallery2..jpg" loading="lazy" />
+          <img src="Gallery2..jpg" alt="Gallery2..jpg" loading="lazy" />
           <div class="gallery-overlay">
             <h3 class="font-bold">School Uniforms</h3>
           </div>
         </div>
         <div class="gallery-item" onclick="openLightbox('https://via.placeholder.com/600x400')">
-          <img src="https://via.placeholder.com/600x400" alt="Gallery3..jpg" loading="lazy" />
+          <img src="Gallery3..jpg" alt="Gallery3..jpg" loading="lazy" />
           <div class="gallery-overlay">
             <h3 class="font-bold">Embroidery Work</h3>
           </div>
         </div>
         <div class="gallery-item" onclick="openLightbox('https://via.placeholder.com/600x400')">
-          <img src="https://via.placeholder.com/600x400" alt="Gallery4.jpg" loading="lazy" />
+          <img src="Gallery4.jpg" alt="Gallery4.jpg" loading="lazy" />
           <div class="gallery-overlay">
             <h3 class="font-bold">Hospital Uniforms</h3>
           </div>
         </div>
         <div class="gallery-item" onclick="openLightbox('https://via.placeholder.com/600x400')">
-          <img src="https://via.placeholder.com/600x400" alt="Gallery5.jpg" loading="lazy" />
+          <img src="Gallery5.jpg" alt="Gallery5.jpg" loading="lazy" />
           <div class="gallery-overlay">
             <h3 class="font-bold">Custom Tailoring</h3>
           </div>
         </div>
         <div class="gallery-item" onclick="openLightbox('https://via.placeholder.com/600x400')">
-          <img src="https://via.placeholder.com/600x400" alt="Gallery6.jpg" loading="lazy" />
+          <img src="Gallery6.jpg" alt="Gallery6.jpg" loading="lazy" />
           <div class="gallery-overlay">
             <h3 class="font-bold">Fabric Selection</h3>
           </div>
@@ -736,7 +736,7 @@
     <div class="container mx-auto flex flex-col md:flex-row items-center gap-10" data-aos="fade-up">
       <div class="md:w-1/3 flex justify-center">
         <div class="premium-card overflow-hidden w-64 h-64 rounded-full">
-          <img src="https://via.placeholder.com/300x300" class="w-full h-full object-cover" alt="Proprietor" />
+          <img src="gallery8.jpg" class="w-full h-full object-cover" alt="Proprietor" />
         </div>
       </div>
       <div class="md:w-2/3 text-center md:text-left">
