--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
 
     /* Logo Circle */
     .logo-circle {
+      <div class="logo-circle">
+  <img src="logo.jpg" alt="SHE CARE Logo" />
+</div>
       width: 60px;
       height: 60px;
       border-radius: 9999px;
@@ -659,37 +662,37 @@
 
       <div class="gallery-grid">
         <div class="gallery-item" onclick="openLightbox('https://via.placeholder.com/600x400')">
-          <img src="Gallery1.jpg" alt="Gallery1.jpg" loading="lazy" />
+          <img src="Gallery1.jpg" alt="Gallery image 1" loading="lazy" />
           <div class="gallery-overlay">
             <h3 class="font-bold">Corporate Uniforms</h3>
           </div>
         </div>
         <div class="gallery-item" onclick="openLightbox('https://via.placeholder.com/600x400')">
-          <img src="Gallery2..jpg" alt="Gallery2..jpg" loading="lazy" />
+          <img src="Gallery2..jpg" alt="Gallery image 2" loading="lazy" />
           <div class="gallery-overlay">
             <h3 class="font-bold">School Uniforms</h3>
           </div>
         </div>
         <div class="gallery-item" onclick="openLightbox('https://via.placeholder.com/600x400')">
-          <img src="Gallery3..jpg" alt="Gallery3..jpg" loading="lazy" />
+          <img src="Gallery3..jpg" alt="Gallery image 3" loading="lazy" />
           <div class="gallery-overlay">
             <h3 class="font-bold">Embroidery Work</h3>
           </div>
         </div>
         <div class="gallery-item" onclick="openLightbox('https://via.placeholder.com/600x400')">
-          <img src="Gallery4.jpg" alt="Gallery4.jpg" loading="lazy" />
+          <img src="Gallery4.jpg" alt="Gallery image 4" loading="lazy" />
           <div class="gallery-overlay">
             <h3 class="font-bold">Hospital Uniforms</h3>
           </div>
         </div>
         <div class="gallery-item" onclick="openLightbox('https://via.placeholder.com/600x400')">
-          <img src="Gallery5.jpg" alt="Gallery5.jpg" loading="lazy" />
+          <img src="Gallery5.jpg" alt="Gallery image 5" loading="lazy" />
           <div class="gallery-overlay">
             <h3 class="font-bold">Custom Tailoring</h3>
           </div>
         </div>
         <div class="gallery-item" onclick="openLightbox('https://via.placeholder.com/600x400')">
-          <img src="Gallery6.jpg" alt="Gallery6.jpg" loading="lazy" />
+          <img src="Gallery6.jpg" alt="Gallery image 6" loading="lazy" />
           <div class="gallery-overlay">
             <h3 class="font-bold">Fabric Selection</h3>
           </div>
@@ -1046,8 +1049,7 @@
       <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
         <div>
           <div class="flex items-center space-x-3 mb-4">
-            <div class="logo-circle">
-              <img src="https://via.placeholder.com/60" alt="SHE CARE Logo" />
+            <div class="logo-circle">  <img src="logo.jpg" alt="SHE CARE Logo" />
             </div>
             <div>
               <div class="text-xl font-bold">SHE CARE</div>
