--- a/index.html
+++ b/index.html
@@ -723,7 +723,7 @@
     <div class="container mx-auto flex flex-col md:flex-row items-center gap-10" data-aos="fade-up">
       <div class="md:w-1/3 flex justify-center">
         <div class="premium-card overflow-hidden w-64 h-64 rounded-full">
-          <img src="https://via.placeholder.com/300x300" class="w-full h-full object-cover" alt="Proprietor" />
+          <img src="gallery8.jpg" class="w-full h-full object-cover" alt="Proprietor" />
         </div>
       </div>
       <div class="md:w-2/3 text-center md:text-left">
@@ -977,7 +977,7 @@
       </div>
 
       <div class="premium-card overflow-hidden">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3918.421689531518!2d78.70582237424618!3d10.865360657929424!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3baaf5671d2b700b%3A0x19d9b6d61f1c7d37!2sSHE%20CARE%20-%20SREE%20ALAGAR%20ENTERPRISES!5e0!3m2!1sen!2sin!4v1721865668972!5m2!1sen!2sin" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3916.123073228068!2d78.67966431533488!3d11.028343992143432!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3baa5f5a0a7a5a5f%3A0x3baa5f5a0a7a5a5f!2sTrichy%2C%20Tamil%20Nadu!5e0!3m2!1sen!2sin!4v1620000000000!5m2!1sen!2sin" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
     </div>
   </section>
