--- a/index.html
+++ b/index.html
@@ -977,7 +977,7 @@
       </div>
 
       <div class="premium-card overflow-hidden">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3916.123073228068!2d78.67966431533488!3d11.028343992143432!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3baa5f5a0a7a5a5f%3A0x3baa5f5a0a7a5a5f!2sTrichy%2C%20Tamil%20Nadu!5e0!3m2!1sen!2sin!4v1620000000000!5m2!1sen!2sin" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1959.4632224512795!2d78.68238018207856!3d10.8169409915115!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3baaf5286fd2cd71%3A0x39f859ca112b16c1!2sSree%20Alagar%20Enterprises!5e0!3m2!1sen!2sin!4v1753437550137!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>"
       </div>
     </div>
   </section>
