--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
       <div class="flex flex-col md:flex-row gap-10 items-center">
         <div class="md:w-1/2">
           <div class="premium-card overflow-hidden">
-            <img src="logo.jpg600x400" alt="About SHE CARE" class="w-full h-auto object-cover" />
+            <img src="logo.jpg" alt="About SHE CARE" class="w-auto h-auto object-cover" />
           </div>
         </div>
 
