--- a/index.html
+++ b/index.html
@@ -684,6 +684,12 @@
             <h3 class="font-bold">Miscellaneous</h3>
           </div>
         </div>
+         <div class="gallery-item" onclick="openLightbox('gallery11.jpg')">
+          <img src="gallery4.jpg" alt="Gallery Image 7" loading="lazy" />
+          <div class="gallery-overlay">
+            <h3 class="font-bold">Custom Tailoring</h3>
+          </div>
+        </div>
       </div>
     </div>
   </section>
@@ -1280,7 +1286,8 @@
       'gallery7.jpg',
       'gallery5.jpg',
       'gallery10.jpg',
-      'gallery11.jpg'
+      'gallery11.jpg',
+      'gallery4.jpg'
     ];
     let currentImageIndex = 0;
 
