--- a/index.html
+++ b/index.html
@@ -1081,7 +1081,7 @@
       </div>
 
       <div class="border-t border-green-700 mt-10 pt-6 text-center">
-        <p>© 2025 SHE CARE – Sree Alagar Enterprises. All rights reserved.</p>
+        <p>© 2025 SHE CARE – Sree Alagar Enterprises. All rights reserved by-Pixelgridhub.</p>
       </div>
     </div>
   </footer>
