--- a/index.html
+++ b/index.html
@@ -1081,8 +1081,9 @@
       </div>
 
       <div class="border-t border-green-700 mt-10 pt-6 text-center">
-        <p>© 2025 SHE CARE – Sree Alagar Enterprises. All rights reserved by-Pixelgridhub.</p>
-      </div>
+  <p>© 2025 SHE CARE – Sree Alagar Enterprises. All rights reserved 
+    powered by <a href="https://pixelgridhub.blog" target="_blank" class="text-green-700 hover:underline">Pixelgridhub</a>.
+  </p>
     </div>
   </footer>
 
