--- a/index.html
+++ b/index.html
@@ -687,48 +687,104 @@
     .section-padding {
       padding: 6rem 1rem;
     }
-  </style>
-  
-  <meta name="title" content="SHE CARE – Sree Alagar Enterprises | Custom Uniforms & Tailoring in Trichy" />
-  <meta name="description" content="SHE CARE by Sree Alagar Enterprises is Trichy's trusted source for custom-made uniforms and garments. We specialize in school uniforms, hospital wear, corporate clothing, and embroidery with on-time delivery across Tamil Nadu." />
-  <meta name="keywords" content="SHE CARE, custom uniforms Trichy, garment manufacturer Tamil Nadu, embroidery services, school uniforms Trichy, hospital uniforms, corporate uniforms, tailoring Trichy, women garments, custom tailoring Trichy" />
-  <meta name="author" content="Sree Alagar Enterprises" />
-  <link rel="canonical" href="https://sreealagarenterprises.in/" />
+<!-- Meta & Head Section -->
+<meta name="title" content="Premium Uniforms in Trichy | Industrial & Custom Uniforms – SHE CARE" />
+<meta name="description" content="SHE CARE by Sree Alagar Enterprises is Trichy's trusted source for industrial, school, and custom uniforms. We specialize in embroidery, corporate wear, and timely delivery across Tamil Nadu." />
+<meta name="keywords" content="industrial uniforms Trichy, custom uniforms Trichy, school uniforms Trichy, corporate uniforms, embroidery services Tamil Nadu, uniform tailor Trichy, SHE CARE" />
+<meta name="author" content="Sree Alagar Enterprises" />
+<link rel="canonical" href="https://sreealagarenterprises.in/" />
 
-  <meta property="og:title" content="SHE CARE – Sree Alagar Enterprises | Custom Uniforms & Tailoring in Trichy" />
-  <meta property="og:description" content="Leading garment manufacturer in Trichy delivering premium school uniforms, corporate wear, and embroidery services across Tamil Nadu." />
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://www.shecaregarments.com/" />
-  <meta property="og:image" content="logo.jpg" />
+<meta property="og:title" content="Premium Uniforms in Trichy | Industrial & Custom Uniforms – SHE CARE" />
+<meta property="og:description" content="Leading garment manufacturer in Trichy delivering premium industrial, school, and custom uniforms with embroidery services across Tamil Nadu." />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://sreealagarenterprises.in/" />
+<meta property="og:image" content="logo.jpg" />
 
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="SHE CARE – Sree Alagar Enterprises" />
-  <meta name="twitter:description" content="Trusted uniform tailor in Trichy offering quality garments and embroidery. School, hospital, and business wear tailored to perfection." />
-  <meta name="twitter:image" content="logo.jpg" />
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="Premium Uniforms in Trichy | Industrial & Custom Uniforms – SHE CARE" />
+<meta name="twitter:description" content="Trusted uniform tailor in Trichy offering industrial, school, and custom uniforms with embroidery. Quality tailoring with on-time delivery." />
+<meta name="twitter:image" content="logo.jpg" />
 
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "LocalBusiness",
-    "name": "SHE CARE – Sree Alagar Enterprises",
-    "image": "logo.jpg",
-    "telephone": "‪+919442190903‬",
-    "email": "shecare2011@gmail.com",
-    "address": {
-      "@type": "PostalAddress",
-      "streetAddress": "No.19/20 Keels, Chatiram Road (Tahsildar Lane), Thennur",
-      "addressLocality": "Trichy",
-      "addressRegion": "Tamil Nadu",
-      "postalCode": "620017",
-      "addressCountry": "IN"
-    },
-    "url": "https://sreealagarenterprises.in",
-    "sameAs": [
-      "https://www.instagram.com/yourprofile",
-      "https://www.facebook.com/yourpage"
-    ]
-  }
-  </script>
+<!-- Hero / Top Section -->
+<section id="hero">
+  <h1>Premium Uniforms in Trichy – Industrial & Custom Uniforms by SHE CARE</h1>
+  <p>SHE CARE delivers top-quality school, corporate, industrial, and custom uniforms across Tamil Nadu. Expert tailoring, embroidery, and on-time delivery guaranteed.</p>
+  <img src="hero-uniform.jpg" alt="Custom and industrial uniforms in Trichy">
+</section>
+
+<!-- About Section -->
+<section id="about">
+  <h2>About SHE CARE – Trusted Uniform Supplier in Trichy</h2>
+  <p>With years of experience in manufacturing and tailoring uniforms, SHE CARE specializes in industrial, school, and custom uniforms. Serving clients across Trichy and Tamil Nadu with premium quality and reliability.</p>
+</section>
+
+<!-- Services Section -->
+<section id="services">
+  <!-- Industrial Uniforms -->
+  <article id="industrial">
+    <h3>Industrial Uniforms Tailored for Your Business</h3>
+    <p>SHE CARE provides durable and professional industrial uniforms for factories, hospitals, and corporates. Custom sizes, embroidery, and bulk orders available.</p>
+    <img src="industrial-uniform.jpg" alt="Industrial uniforms stitching Trichy">
+  </article>
+
+  <!-- Custom Uniforms -->
+  <article id="custom">
+    <h3>Custom Uniforms Designed to Fit Your Needs</h3>
+    <p>Get personalized uniforms with logos, colors, and styles tailored for your team or organization. Perfect for schools, corporates, and events.</p>
+    <img src="custom-uniform.jpg" alt="Custom embroidered uniforms Trichy">
+  </article>
+
+  <!-- School / Corporate Uniforms -->
+  <article id="school">
+    <h3>School and Corporate Uniforms in Trichy</h3>
+    <p>High-quality uniforms for students and professionals. Comfortable, durable, and designed to your specifications.</p>
+    <img src="school-uniform.jpg" alt="School and corporate uniforms in Trichy">
+  </article>
+</section>
+
+<!-- Why Choose Us Section -->
+<section id="why-choose-us">
+  <h2>Why Choose SHE CARE for Your Uniforms</h2>
+  <ul>
+    <li>On-time delivery across Tamil Nadu</li>
+    <li>Expert tailoring & embroidery</li>
+    <li>Bulk orders and custom designs available</li>
+  </ul>
+</section>
+
+<!-- Contact / CTA Section -->
+<section id="contact">
+  <h2>Get Your Custom Uniform Today</h2>
+  <p>Call: <a href="tel:+919442190903">+91 94421 90903</a> | Email: <a href="mailto:shecare2011@gmail.com">shecare2011@gmail.com</a></p>
+  <p>Address: No.19/20 Keels, Chatiram Road (Tahsildar Lane), Thennur, Trichy, Tamil Nadu – 620017</p>
+</section>
+
+<!-- Structured Data / Schema -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "LocalBusiness",
+  "name": "SHE CARE – Sree Alagar Enterprises",
+  "image": "logo.jpg",
+  "telephone": "+919442190903",
+  "email": "shecare2011@gmail.com",
+  "address": {
+    "@type": "PostalAddress",
+    "streetAddress": "No.19/20 Keels, Chatiram Road (Tahsildar Lane), Thennur",
+    "addressLocality": "Trichy",
+    "addressRegion": "Tamil Nadu",
+    "postalCode": "620017",
+    "addressCountry": "IN"
+  },
+  "url": "https://sreealagarenterprises.in",
+  "sameAs": [
+    "https://www.instagram.com/yourprofile",
+    "https://www.facebook.com/yourpage"
+  ],
+  "priceRange": "$$",
+  "description": "SHE CARE offers premium industrial, school, and custom uniforms with embroidery and timely delivery across Tamil Nadu."
+}
+</script>
 </head>
 <body class="bg-white text-gray-800 overflow-x-hidden">
   <!-- Skeleton Loading Screen -->
